# botML

./: .gitignore  AGENTS.md  README.md  RUNNING.md  backtest.py  bot.py  cli.py  config.yaml  crea.py  dashboard.py  evolution.py  features.py  hyperoptimize.py  labeling.py  live_trading.py  main.py  orchestrator.py  pyproject.toml  realtime_loop.py  requirements.txt  research_loop.py  run_backtest.py  strategy.py  train_model.py  utils.py
.github/workflows/: python-tests.yml
backtest/: __init__.py  engine.py  metrics.py  portfolio.py  report.py  trade.py  utils.py  walkforward.py
botml/: __init__.py  alerts.py  data.py  features.py  risk.py  utils.py  walkforward.py  workflow.py
dashboard/: __init__.py  dashboard.py
data_feed/: __init__.py  downloader.py
logging_utils/: logging.py
models/: __init__.py  manager.py
modules/: analytics.py
tests/: conftest.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_walkforward.py  test_backtester.py  test_bot_downloader.py  test_data_feed.py  test_features.py  test_generate_features_and_labels.py  test_hyperoptimize.py  test_labeling.py  test_main.py  test_model_manager.py  test_orchestrator_multisymbol.py  test_realtime_loop.py  test_report.py  test_research_loop.py  test_risk.py  test_run_backtest.py  test_simulator.py  test_train_model.py  test_walkforward.py  test_workflow.py
trading/: __init__.py  live.py  simulation.py
watchdog/: __init__.py  watchdog.py
