[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "botml"
version = "0.1.0"
description = "Utilities for trading workflows"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
# none for now

[tool.setuptools.packages.find]
where = ["."]
include = ["botml*"]
